# BigO-Orange

./: .gitignore  CMakeLists.txt
Backtracking/: Digger Octaves.cpp  Dreamoon and WiFi.cpp  Lotto.cpp  Minimize Absolute Difference.cpp  Splitting Numbers.cpp  The Boggle Game.cpp  The Hamming Distance Problem.cpp
Bit Manipulation/: Aish And XOR.cpp  Brexit Negotiations.cpp  Mattey Multiplication.cpp  Online Courses in BSU.cpp  Power of Two.cpp  Samu and her Birthday Party.cpp  Sansa and XOR.cpp
Divide and Conquer/: Bit Maps.cpp  Distance in Tree.cpp  Fill the Containers.cpp  Painting Fence.cpp  The Closest Pair Problem.cpp  Tree Summing.cpp  Tricky Function.cpp
Dynamic Programming I/: Alphacode.cpp  Bytelandian gold coins.cpp  Ingenuous Cubrency.cpp  K-based Numbers.cpp  Minimum Indexed Character.cpp  OR in Matrix.cpp  Philosophers Stone.cpp
Dynamic Programming II/: Advanced Fruits.cpp  Aibohphobia.cpp  Compromise.cpp  Cross-country.cpp  LCS of three strings.cpp  Love Calculator.cpp  Palindromic characteristics.cpp
Dynamic Programming III/: Beautiful People.cpp  Check Transcription.cpp  Prince And Princess.cpp  Testing the CATCHER.cpp  The Tower of Babylon.cpp  Wavio Sequence.cpp
Dynamic Programming IV/: DNA sequences.cpp  Dividing coins.cpp  Diving for Gold.cpp  Exact Change.cpp  Pick The Sticks.cpp  Polo the Penguin and the Test.cpp  Scuba diver.cpp
Final Exam/: File Recover Testing.cpp  Little Deepu and Array.cpp  Mancunian and K-Ordered LCS.cpp  Message Spreading.cpp  Trainsorting.cpp
Greedy/: Building Permutation.cpp  Making Jumps.cpp  (+5 more)
(+47 files in other folders)
